Font updates and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Design Technologist & Interaction Engineer" />
     <meta name="author" content="Cristobal Grana Samanez" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="./favicon.png"/>
   </head>
 
   <body>
@@ -20,7 +21,7 @@
         <section class="about">
           <p>I'm Peruvian-born interaction engineer with a passion for minimalist styles and delightful experiences. I believe design problems are best solved with a technical mindset – contributing at the intersect of design and development is crucial in the creation of interfaces that are truly enjoyable and seamless to use. In a rapidly changing landscape of LLM-driven programming, I think design engineers are uniquely positioned to unilaterally effect impactful change on a product's end user experience.</p>
           
-          <p>I'm currently working as a Lead UX Engineer on the Design Foundations team at <a href="https://www.godaddy.com/" class="link">GoDaddy</a>, helping evolve the company's design system while providing inter-organizational interaction engineering support.</p>
+          <p>I'm currently working as a Lead UX Engineer on the Design Foundations team at <a href="https://www.godaddy.com/" class="link">GoDaddy</a>, helping evolve the company's design system while providing inter-organizational interaction engineering support. Outside of work, I'm reading <a href="https://www.goodreads.com/book/show/62069739-when-we-cease-to-understand-the-world" class="link" target="_blank" rel="noreferrer">When We Cease to Understand the World</a> by Benjamin Labatut, and playing <a href="https://open.spotify.com/album/3iKxcGgS71n7ND8I2A3CF5?si=UqEgxU9ZSK-kC2SHAjlPkw" class="link" target="_blank" rel="noreferrer">Egotrip</a> by John Michel and Anthony James on repeat.</p>
         </section>
 
         <section class="projects">
@@ -63,7 +64,7 @@
         <div class="footer-links">
           <a href="mailto:hellothere@cristobalgrana.me" class="footer-link" target="_blank" rel="noreferrer">Email</a>
           <a href="https://www.linkedin.com/in/cristobal-grana-samanez/" class="footer-link" target="_blank" rel="noreferrer">LinkedIn</a>
-          <a href="./resume-combined.pdf" class="footer-link" target="_blank" rel="noreferrer">Resume</a>
+          <a href="https://www.dropbox.com/scl/fi/52irlvrcujjtmb0nvyitj/resume-combined.pdf?rlkey=vvn946gyqxrmpwzmmpjnro9ew&st=jjvklpnk&dl=0" class="footer-link" target="_blank" rel="noreferrer">Resume</a>
         </div>
         <div class="footer-info">
           <span class="weather" id="weather">
